--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-expand-md navbar-default">
+  <a class="navbar-brand" href="#">GitHubSearch</a>
+
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+  <app-profile></app-profile>
+</div>
+
